--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,60 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #FFF3C7;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+.Header{
+  height: 200px;
+  border-radius: 20px;
+  background-color:#FFD6A5;
   }
-  a:hover {
-    color: #747bff;
+
+  .Textheader {
+   text-align: center;
+   font-size: 90px;
   }
-  button {
+  .Container {
+    display: flex;
+    justify-content: center; 
+    padding: 20px;
+  }
+  
+  .Box {
+    width: 80%;
+    max-width: 600px;
     background-color: #f9f9f9;
+    border-radius: 10px; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    padding: 20px;
+    margin: 20px 0; 
   }
-}
+  
+  .Gambar-Resep {
+    width: 100%; 
+    height: auto;
+    border-radius: 10px;
+    margin-bottom: 20px;
+  }
+  
+  h2 {
+    font-size: 24px;
+    color: #333; 
+    margin-bottom: 15px;
+  }
+  
+  h3 {
+    font-size: 18px;
+    color: #555;
+    margin-bottom: 10px;
+  }
+  
+  ul, ol {
+    margin: 0;
+    padding: 0 20px; 
+    color: #666;
+  }
+  
+  li {
+    line-height: 1.6; 
+    margin-bottom: 8px;
+  }
+  
